# obs-studio

./: .gitmodules
plugins/: CMakeLists.txt
plugins/obs-live2d/: CMakeLists.txt  LAppAllocator.cpp  LAppAllocator.hpp  LAppDefine.cpp  LAppDefine.hpp  LAppDelegate.cpp  LAppDelegate.hpp  LAppLive2DManager.cpp  LAppLive2DManager.hpp  LAppModel.cpp  LAppModel.hpp  LAppPal.cpp  LAppPal.hpp  LAppSprite.cpp  LAppSprite.hpp  LAppTextureManager.cpp  LAppTextureManager.hpp  LAppView.cpp  LAppView.hpp  TouchManager.cpp  TouchManager.hpp  obs-live2d-plugin.cpp
plugins/obs-live2d/data/locale/: en-US.ini
